Refonte interface Swing (suppression JavaFX) + images cartes